2010-03-22  Dominique Dumont  <domi.dumont@free.fr>

	* lib/Config/Model/Node.pm (previous_element): new method to
	iterate through availalble node elements

2010-03-17  Dominique Dumont  <domi.dumont@free.fr>

	* lib/Config/Model/Value.pm (setup_match_regexp): added new
	'match' parameter to validate a value against a Perl regular
	expression.

2010-03-16  Dominique Dumont  <dominique.dumont@hp.com>

	* lib/Config/Model/Node.pm (load_data): can load data in hidden
	element when store check is ignored.

2010-03-11  Dominique Dumont  <dominique.dumont@hp.com> v0.644

	* lib/Config/Model/Loader.pm (load): Load string now support:
	- '.=' operator to append to config values.
	- '=~' to loop configurations instruction over list or hash elements

2010-03-01  Dominique Dumont  <dominique.dumont@hp.com>

	* all: Applied spelling corrections done by Debian Perl
	team (thanks gregoa)

2010-02-23  Dominique Dumont  <dominique.dumont@hp.com>  v0.643

	* lib/Config/Model/DumpAsData.pm (dump_as_data): Can dump ordered
	hash in hash ref with __order key to specify order of hash
	elements

	* lib/Config/Model/HashId.pm (load_data): Accept hash ref with
	__order to load ordered data

2010-02-17  Dominique Dumont  <domi.dumont@free.fr>

	* lib/Config/Model/AnyId.pm: For better clarity, Hash and List
	parameter max and min are changed to max_index and
	min_index. Backward compatibility is kept, but warning will be
	displayed on the terminal when the old parameters are used.

	* lib/Config/Model/Backend/Yaml.pm: New backend to read and write
	YAML configuration files.

2010-02-05  Dominique Dumont  <domi.dumont@free.fr>

	* lib/Config/Model/CheckList.pm (set): buf fix: split input value
	to get the list of checked items.
	Migrated to Log4perl

2010-02-03  Dominique Dumont  <domi.dumont@free.fr>

	* lib/Config/Model/CheckList.pm: Fixed default and upstream
	default handling

2010-01-21  Dominique Dumont  <dominique.dumont@hp.com> v0.642
